[findbugs] Silence warning on slow Long(long) constructor
This change won't really affect performance as timestamp or file
length are unlikely to be in the cached range -128,127.

Change-Id: I9ac0051b3f3b8873c40109e6f0174245e382ef9c
Signed-off-by: Matthias Sohn <matthias.sohn@sap.com>